# hatch-django-locales

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/hatch_django_locales/: hook.py  hooks.py
